docs; org.junit-pioneer:junit-pioneer; cleanup