@@ -52,8 +52,10 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation("org.junit-pioneer:junit-pioneer:latest.release")
 }
 
 tasks.named('test', Test) {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
